Update Development Roadmap with proper table containers

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
             padding-left: 25px;
         }
         
+        ol {
+            margin: 15px 0;
+            padding-left: 25px;
+        }
+        
         li {
             margin-bottom: 8px;
             color: #cbd5e0;
@@ -228,17 +233,7 @@
         <h1>HyperFlow Development Roadmap</h1>
 
 <h2>Phase 1: Foundation (Q1 2025)</h2>
-
-<h3>Objectives</h3>
 <p>Core infrastructure development and security establishment</p>
-
-<h3>Key Deliverables</h3>
-<ul>
-    <li><strong>Smart Contract Development</strong>: Complete vault and governance contracts</li>
-    <li><strong>Security Audits</strong>: Comprehensive audits by leading firms</li>
-    <li><strong>Presale Launch</strong>: Fair and democratic token distribution</li>
-    <li><strong>Basic Strategies</strong>: Initial yield optimization vaults</li>
-</ul>
 
 <div class="table-container">
     <h4>Phase 1 Targets</h4>
@@ -273,17 +268,7 @@
 </div>
 
 <h2>Phase 2: Integration (Q2 2025)</h2>
-
-<h3>Objectives</h3>
 <p>HyperCore integration and advanced strategy implementation</p>
-
-<h3>Key Features</h3>
-<ul>
-    <li><strong>Native Precompile Integration</strong>: Direct HyperCore orderbook access</li>
-    <li><strong>Delta-Neutral Strategies</strong>: Advanced risk-managed yield generation</li>
-    <li><strong>Cross-Protocol Router</strong>: Seamless multi-protocol interactions</li>
-    <li><strong>Mobile Interface</strong>: User-friendly mobile application</li>
-</ul>
 
 <div class="table-container">
     <h4>Phase 2 Targets</h4>
@@ -318,17 +303,7 @@
 </div>
 
 <h2>Phase 3: Expansion (Q3 2025)</h2>
-
-<h3>Objectives</h3>
 <p>Cross-chain capabilities and institutional-grade features</p>
-
-<h3>Major Features</h3>
-<ul>
-    <li><strong>Cross-Chain Bridge</strong>: Multi-network asset transfers</li>
-    <li><strong>Institutional Dashboard</strong>: Professional portfolio management</li>
-    <li><strong>Advanced Risk Tools</strong>: Comprehensive risk assessment</li>
-    <li><strong>Partnership Integrations</strong>: Strategic protocol collaborations</li>
-</ul>
 
 <div class="table-container">
     <h4>Phase 3 Targets</h4>
@@ -361,60 +336,6 @@
         </table>
     </div>
 </div>
-
-<h2>Phase 4: Maturation (Q4 2025)</h2>
-
-<h3>Objectives</h3>
-<p>Full ecosystem integration and DAO governance transition</p>
-
-<h3>Final Features</h3>
-<ul>
-    <li><strong>Complete DAO Governance</strong>: Full community control</li>
-    <li><strong>AI-Powered Optimization</strong>: Machine learning strategies</li>
-    <li><strong>Real-World Assets</strong>: Traditional asset integration</li>
-    <li><strong>Global Expansion</strong>: Multi-regional operations</li>
-</ul>
-
-<div class="table-container">
-    <h4>Phase 4 Targets</h4>
-    <div class="table-responsive">
-        <table class="data-table">
-            <thead>
-                <tr>
-                    <th>Metric</th>
-                    <th>Target Range</th>
-                    <th>Success Criteria</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><strong>Total Value Locked</strong></td>
-                    <td>$25M - $50M</td>
-                    <td>Top-tier DeFi protocol</td>
-                </tr>
-                <tr>
-                    <td><strong>Active Users</strong></td>
-                    <td>10,000+</td>
-                    <td>Global user base</td>
-                </tr>
-                <tr>
-                    <td><strong>Global Presence</strong></td>
-                    <td>Multiple regions</td>
-                    <td>Regulatory compliance</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-
-<h2>Success Metrics</h2>
-<ul>
-    <li><strong>TVL Growth</strong>: Consistent month-over-month growth</li>
-    <li><strong>User Retention</strong>: >85% monthly active user retention</li>
-    <li><strong>Revenue Generation</strong>: Sustainable fee income growth</li>
-    <li><strong>Community Engagement</strong>: Active governance participation</li>
-    <li><strong>Security Record</strong>: Zero critical vulnerabilities</li>
-</ul>
     </div>
 </body>
 </html>
